Tic-Rac-Roe HW progress.

--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Tic Tac Toe</title>
+	<title>Tic-Tac-Toe Game</title>
 	<link rel="stylesheet" href="style.css">
 	<script defer src="script.js"></script>
 </head>
 
 <body>
+	<header>Tic-Tac-Toe</header>
 	<h1></h1>
 	<main id="board">
-		<div id="sq-0"></div>
-		<div id="sq-1"></div>
-		<div id="sq-2"></div>
-		<div id="sq-3"></div>
-		<div id="sq-4"></div>
-		<div id="sq-5"></div>
-		<div id="sq-6"></div>
-		<div id="sq-7"></div>
-		<div id="sq-8"></div>
+		<div id="grid-0"></div>
+		<div id="grid-1"></div>
+		<div id="grid-2"></div>
+		<div id="grid-3"></div>
+		<div id="grid-4"></div>
+		<div id="grid-5"></div>
+		<div id="grid-6"></div>
+		<div id="grid-7"></div>
+		<div id="grid-8"></div>
 	</main>
-	<button>PLAY AGAIN</button>
+	<button>Reset Game</button>
 </body>
 
 </html>
