With new style options

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tic-Tac-Toe Game</title>
+	<!-- include Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Marcellus+SC&family=Tilt+Prism&display=swap"
+		rel="stylesheet">
+
+
+
+
 	<link rel="stylesheet" href="style.css">
 	<script defer src="script.js"></script>
 </head>
@@ -13,6 +22,7 @@
 <body>
 	<header>Tic-Tac-Toe</header>
 	<h1></h1>
+	<!-- Displays a 3x3 grid  -->
 	<main id="board">
 		<div id="grid-0"></div>
 		<div id="grid-1"></div>
@@ -28,5 +38,3 @@
 </body>
 
 </html>
-
-<!-- WiP -->
